--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -22,6 +22,10 @@
 /*-------------------------------------------------------*/
 /* 1. Isotope filtering
 /*-------------------------------------------------------*/
+* {
+    margin: 0px;
+    padding: 0px;
+}
 #content {
     background: #fff;
 }
@@ -56,6 +60,13 @@
     
 }
 
+.shop-widget {
+    display: none;
+}
+
+.blog-side {
+    width: 100%;
+}
 .navbar {
 	margin-bottom: 0;
     background: #fff;
@@ -156,7 +167,9 @@ ul.social-icons li a:hover {
 }
 
 .navbar-brand img{
-    height: 70px;    
+    height: 60px;    
+    margin-left: 150px;    
+    margin-top: -10px;
 }
 
 
@@ -197,11 +210,10 @@ header.active .navbar-brand {
 
 .navbar-default .navbar-nav > li > a {
     position: relative;
-    color: #000;
-    font-size: 16px;
-    font-family:Î¢ÈíÑÅºÚ;
+    color: #000;    
+    font-family:"Times New Roman",Georgia,Serif;;
     font-weight: 900;
-    padding: 44px 0;
+    padding: 30px 0;
     border-top: 5px solid transparent;
     z-index: 2;
     transition: all 0.17s ease-in-out;
